2011-08-22  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tap/awk: support Solaris /usr/bin/nawk
	* lib/tap-driver.sh (close_or_die): Remove, the use of the `close'
	builtin in there was confusing /usr/bin/nawk from Solaris 10 into
	a syntax error.
	(write_test_results): Simply use `close' on the `*.trs' file, that
	should be enough.

2011-08-21  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tap/awk: correctly extract message from SKIP plans
	* lib/tap-driver.sh (/^1\.\.0+[ \t]*#/): Add a forgotten `?' to
	the regex used to extract the skip message from a "1..0" TAP plan.
	* tests/planskip.test: Check for the just-fixed bug.
	* tests/tap-planskip-unplanned-corner.test: Don't be too strict
	w.r.t. the formatting of the "skip whole test" message, to avoid
	failing due to bugs irrelevant for this test (like the one just
	fixed).

2011-08-21  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tap/awk: support colorized output
	* lib/tap-driver.sh: Pass definition of colors to the BEGIN block
	of the awk script, using ...
	($init_colors): ... this new variable, which supersedes ...
	($red, $grn, $lgn, $blu, $mgn, $std): ... these variables, which
	have been consequently removed.
	($color_tests): We don't have to pass this anymore to the awk
	script, so do not convert it to a numeric boolean.
	(decorate_result): Implement for real.
	With this change, the test 'tap-color.test' now passes.

2011-08-21  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tap: real (but still incomplete) awk implementation of TAP driver
	* lib/tap-driver.sh: Add an incomplete, but mostly working,
	implementation of a TAP parser and driver in awk.  It doesn't yet
	support colorized output, fetching of exit status from test
	programs, nor a way to escape TAP directives in TAP result lines,
	but passes all the tests of TAP support in the automake testsuite,
	apart from the following ones:
	  - tap-color.test
	  - tap-escape-directive.test
	  - tap-exit.test