@@ -1,5 +1,12 @@
 2011-08-22  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	tap/awk: support Solaris /usr/xpg4/bin/awk
+	* lib/tap-driver.sh: Use `\t', not `\\t', to represent tabulation
+	character in regexps, even when inside double-quoted strings; that
+	seems to be more portable to Solaris 10 XPG4 awk.
+
+2011-08-22  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	tap/awk: support Solaris /usr/bin/nawk
 	* lib/tap-driver.sh (close_or_die): Remove, the use of the `close'
 	builtin in there was confusing /usr/bin/nawk from Solaris 10 into
